src/test/compile-fail/extfmt-not-enough-args.rs
// error-pattern:not enough arguments

use std;

fn main() { let s = #ifmt["%s%s%s", "test", "test"]; }
